- Ledger.PrintHead(), replaced the if-elses with a switch to clean up.